# bysel

./: .gitignore  AGENTS.md  CHANGELOG.md  ISSUES.md  LICENSE  README.md  cli.py  dump.sh  pyproject.toml  train.py
.github/workflows/: deploy.yml
busel_rust_io/: AGENTS.md  Cargo.toml  lib.rs
busel_rust_io/busel/: __init__.py
configs/: default.yaml
configs/pipelines/: dpo-only.yaml  full.yaml  pretrain-only.yaml  quick.yaml
data/: AGENTS.md  dpo.py  pipeline.py  presets.py  sft.py
docs/: astro.config.mjs
model/: AGENTS.md  attention.py  backbone.py  layers.py  patching.py  routing.py
multimodal/: AGENTS.md  __init__.py  encoders.py
scripts/: setup.sh
site/: astro.config.mjs
site/src/content/docs/: index.mdx
site/src/content/docs/architecture/: attention.md  mar.md  moe.md  mtp.md  one-bit-weights.md  overview.md  patching.md
site/src/content/docs/data/: formats.md  multimodal.md  pipeline.md
site/src/content/docs/guides/: getting-started.md  profiles.md  quick-tour.md
site/src/content/docs/operations/: faq.md  inference.md  troubleshooting.md
site/src/content/docs/performance/: compile-modes.md  hardware.md  profiling.md
site/src/content/docs/reference/: config.md  data.md  logging.md  model.md  registry.md  training.md  ui.md
site/src/content/docs/training/: autopilot.md  checkpointing.md  curriculum.md  optimizer.md  training-guide.md
tests/: AGENTS.md  profiler_run.py  quick_imu1_profile.py  scaling_laws.py  shpak_profile_pairs.py  test_mar.py  test_suite.py  v58_profile.py  v63_profile.py
tools/: AGENTS.md  data_manager.py  eval.py  orchestrator.py  plotter.py  tool_executor.py
training/: AGENTS.md  autopilot.py  optimizer.py  recipe.py
training/stages/: __init__.py  base.py  dpo.py  eval.py  pretrain.py  sft.py
