[project]
name = "busel"
version = "4.0.0"
description = "busel - Sovereign 1-bit Omni-LLM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flash-linear-attention>=0.5.0",
    "maturin>=1.13.3",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pyyaml>=6.0.3",
    "torch>=2.12.0",
    "typer>=0.26.4",
    "pillow",
    "datasets>=4.8.5",
]

[build-system]
requires = ["maturin>=1.13.3,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "busel"
features = ["pyo3/extension-module"]
manifest-path = "busel_rust_io/Cargo.toml"
python-source = "busel_rust_io"
